--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   circle_list: ^1.0.5
   clickable_list_wheel_view: ^0.2.0
 #  turn_page_transition: ^0.3.0
+#  lazy_load_indexed_stack: ^1.1.0
 
 
 dev_dependencies:
