--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.0
+  sdk: ^3.5.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,8 +37,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   circle_list: ^1.0.5
   clickable_list_wheel_view: ^0.2.0
-#  turn_page_transition: ^0.3.0
-#  lazy_load_indexed_stack: ^1.1.0
+  #  turn_page_transition: ^0.3.0
+  #  lazy_load_indexed_stack: ^1.1.0
+  rich_editor: ^0.0.8
+  flutter_svg: ^2.0.10+1
+  #  flutter_quill: ^10.5.16
+  flutter_quill:
+    git:
+      url: https://github.com/singerdmx/flutter-quill.git
+      ref: v10.5.16
+  flutter_keyboard_visibility: ^6.0.0
+
+  super_clipboard: ^0.8.22
 
 
 dev_dependencies:
@@ -63,10 +73,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
