--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   clickable_list_wheel_view: ^0.2.0
   #  turn_page_transition: ^0.3.0
   #  lazy_load_indexed_stack: ^1.1.0
-  rich_editor: ^0.0.8
+#  rich_editor: ^0.0.8
   flutter_svg: ^2.0.10+1
   #  flutter_quill: ^10.5.16
   flutter_quill:
@@ -47,8 +47,8 @@ dependencies:
       url: https://github.com/singerdmx/flutter-quill.git
       ref: v10.5.16
   flutter_keyboard_visibility: ^6.0.0
-
   super_clipboard: ^0.8.22
+  star_menu: ^4.0.1
 
 
 dev_dependencies:
