--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,12 @@ dependencies:
       ref: v10.5.16
   flutter_keyboard_visibility: ^6.0.0
   super_clipboard: ^0.8.22
-  star_menu: ^4.0.1
+#  star_menu: ^4.0.1
   pageviewj: ^0.0.3
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  flutter_staggered_animations: ^1.1.1
+  shared_preferences: ^2.3.2
 
 
 dev_dependencies:
