--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path: ^1.9.0
   flutter_staggered_animations: ^1.1.1
   shared_preferences: ^2.3.2
+  table_calendar: ^3.1.2
 
 
 dev_dependencies:
